<resources>
    <string name="app_name">Minesweeper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="game_settings">Game Settings</string>
    <string name="beginner">"Beginner : 8 x 8 - 10 mines"</string>
    <string name="intermediate">"Intermediate : 16 x 16 - 40 mines"</string>
    <string name="expert">"Expert : 16 x 30 - 99 mines"</string>
    <string name="custom">Custom</string>
    <string name="rows">Rows</string>
    <string name="columns">Columns</string>
    <string name="mines">Mines</string>
    <string name="settings_ok">OK</string>
    <string name="settings_error_fill_all">Fill all the custom informations to validate</string>
    <string name="settings_error_too_many_mines">There are too many mines for the board</string>
    <string name="settings_error_columns_number">Columns must be between 4 and 16</string>
    <string name="settings_error_rows_number">Rows number must be between 4 and 40</string>
</resources>
