<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_margin">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/beginner_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/beginner"
            android:textSize="15sp"/>

        <RadioButton
            android:id="@+id/intermediate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/intermediate"
            android:textSize="15sp"/>

        <RadioButton
            android:id="@+id/expert_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/expert"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/settings_incorrect"
            android:textColor="@color/red"
            android:visibility="invisible"
            />

        <RadioButton
            android:id="@+id/custom_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/custom"
            android:textSize="15sp"/>

    </RadioGroup>

    <LinearLayout
        android:id="@+id/custom_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible">

        <EditText
            android:id="@+id/rows_input"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="24dp"
            android:hint="@string/rows"
            android:gravity="center"
            android:inputType="number"
            android:textSize="15sp"
            />

        <EditText
            android:id="@+id/columns_input"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="24dp"
            android:hint="@string/columns"
            android:gravity="center"
            android:inputType="number"
            android:textSize="15sp"
            />

        <EditText
            android:id="@+id/mines_input"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="24dp"
            android:hint="@string/mines"
            android:gravity="center"
            android:inputType="number"
            android:textSize="15sp"
            />

    </LinearLayout>
</LinearLayout>